--- a/css/sass/stylesheets/abstracts/_mixins.scss
+++ b/css/sass/stylesheets/abstracts/_mixins.scss
@@ -6,6 +6,7 @@
 /// @author Harry Roberts
 /// @param {Bool} $self [false] - Whether or not to include current selector
 /// @link https://twitter.com/csswizardry/status/478938530342006784 Original tweet from Harry Roberts
+
 @mixin on-event($self: false) {
   @if $self {
     &,
@@ -36,6 +37,30 @@
 /// @param {String} $context
 @mixin when-inside($context) {
   #{$context} & {
+    @content;
+  }
+}
+
+@mixin optional-at-root($sel) {
+  @at-root #{if(not &, $sel, selector-append(&, $sel))} {
+    @content;
+  }
+}
+
+@mixin placeholder {
+  @include optional-at-root('::-webkit-input-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root('::-moz-placeholder') {
+    @content;
+  }
+
+  @include optional-at-root(':-ms-input-placeholder') {
     @content;
   }
 }
