--- a/css/sass/stylesheets/base/_base.scss
+++ b/css/sass/stylesheets/base/_base.scss
@@ -24,10 +24,11 @@ body {
 }
 
 
+
 .mini-nav  {
 // display:none;
   .navbar { 
-
+    @include border-radius(0, 0);
     @media (min-width: 767px) {
     position: relative;
     padding: .5rem 1rem;
